--- a/thesis.tex
+++ b/thesis.tex
@@ -56,15 +56,18 @@
 
 % The dedication and acknowledgement pages are optional. Comment them out to remove them.
 \dedication{This is where you put your dedications.}
-\acknowledge{Thank you to Dr. Thinh Doan and Dr. Michael Hsiao for your guidance and expertise throughout my undergraduate and graduate studies.}
+\acknowledge{This is where you put your acknowledgement.}
+%\acknowledge{Thank you to Dr. Thinh Doan and Dr. Michael Hsiao for your guidance and expertise throughout my undergraduate and graduate studies.}
 
 % The abstract is required.
-\abstract{In recent years, neuro-symbolic learning methods have demonstrated promise in tasks requiring a semantic understanding that can often be missed by traditional deep learning techniques. By integrating symbolic reasoning with deep learning architectures the interpretability of the model's reasoning becomes more evident and can provide more control during deployment. This thesis aims to apply neuro-symbolic learning to the domain of reinforcement learning. First, a simulation environment for robotic manipulation tasks based on the Gazebo Harmonic physics simulator and ROS2 middleware suite is presented. In this environment an analysis of policy-gradient based reinforcement learning algorithm is given. Then, by leveraging the performance of deep learning with the semantic reasoning and interpretability of symbolically defined programming, a novel neuro-symbolic learning method is proposed to generalize tasks and motion planning for robotics applications using natural language. This novel neuro-symbolic can be seen as an adaptation of the Neuro-Symbolic Concept Learner (Mao et. al) developed by IBM Watson, in which images and natural language are first processed by convolutional and residual neural networks, respectively and then parsed by a symbolically reasoned program. Where the architecture proposed in this paper differs, is in its use of the Neuro-Symbolic Concept Learner for preprocessing of a given input task, to then inform a reinforcement learning agent of how to act in a given environment. Finally, the novel adaptation of the Neuro-Symbolic Concept Learner is introduced as a method of controlling multi-task agents.
+\abstract{
+%\abstract{In recent years, neuro-symbolic learning methods have demonstrated promise in tasks requiring a semantic understanding that can often be missed by traditional deep learning techniques. By integrating symbolic reasoning with deep learning architectures the interpretability of the model's reasoning becomes more evident and can provide more control during deployment. This thesis aims to apply neuro-symbolic learning to the domain of reinforcement learning. First, a simulation environment for robotic manipulation tasks based on the Gazebo Harmonic physics simulator and ROS2 middleware suite is presented. In this environment an analysis of policy-gradient based reinforcement learning algorithm is given. Then, by leveraging the performance of deep learning with the semantic reasoning and interpretability of symbolically defined programming, a novel neuro-symbolic learning method is proposed to generalize tasks and motion planning for robotics applications using natural language. This novel neuro-symbolic can be seen as an adaptation of the Neuro-Symbolic Concept Learner (Mao et. al) developed by IBM Watson, in which images and natural language are first processed by convolutional and residual neural networks, respectively and then parsed by a symbolically reasoned program. Where the architecture proposed in this paper differs, is in its use of the Neuro-Symbolic Concept Learner for preprocessing of a given input task, to then inform a reinforcement learning agent of how to act in a given environment. Finally, the novel adaptation of the Neuro-Symbolic Concept Learner is introduced as a method of controlling multi-task agents.
 }
 %\abstract{\lipsum [1-4]}
 
 % The general audience abstract is required. There are currently no word limits.
-\abstractgenaud{Neuro-symbolic learning is an area in machine learning that leverages user defined symbolic programming in addition to deep learning. This method goes against the typical approach of end-to-end training of models and instead hopes to benefit from the introduction of symbolic programs.
+\abstractgenaud{
+%\abstractgenaud{Neuro-symbolic learning is an area in machine learning that leverages user defined symbolic programming in addition to deep learning. This method goes against the typical approach of end-to-end training of models and instead hopes to benefit from the introduction of symbolic programs.
 }
 
 \begin{document}
@@ -120,17 +123,10 @@ $\sigma$ is the eighteenth letter of the Greek alphabet, and carries the 's' sou
 	\end{figure}
 
     \chapter{Environment and Dataset} \label{ch:training_environment}
-    A custom simulation environment was created to demonstrate the possibilities of the Neuro-Symbolic Reinforcement Learning Methods presented in the previous chapter. The environment was set up for manipulation tasks that can be seen as an extension of the CLEVR dataset.
-    \section{Overview} \label{ch:environment_overview}
+    A custom simulation environment was created to demonstrate the possibilities of the Neuro-Symbolic Reinforcement Learning Methods presented in the previous chapter. The environment was set up for basic object manipulation tasks. The cooresponding dataset used to train the model that can be seen as an extension of the CLEVR dataset -- which instead prompts the agent to act on the objects in the environment.
+    \section{Environment Overview} \label{ch:environment_overview}
     The environment consists of a six axis robot arm set up in the Gazebo Robotic Simulator. Within the arm's working envelop various basic 3-D shapes (i.e. spheres, cubes, cylinders, etc.) are present.
     
-    \begin{figure}[htb]
-        \centering
-		    \includegraphics[scale=0.25]{./images/architecture_overview}
-				\caption{Overview of proposed architecture.} 
-			\label{fig:architecture_overview}
-	\end{figure}
-
     \section{Robot Operating System} \label{se:robot_operating_system}
     The Robot Operating System is a middleware suite used for robot software development.
     ROS workspaces consist of packages that interface with ROS libraries. 
@@ -144,15 +140,8 @@ $\sigma$ is the eighteenth letter of the Greek alphabet, and carries the 's' sou
     \subsection{Simulation Package} \label{ss:simulation_package}
     \section{Dataset} \label{se:dataset}
      
-
-
-
 	\chapter{Simulations} \label{ch:simulations}
 
-
-
-	\chapter{} \label{ch:simulations}
-    
 	\chapter{Reality} \label{ch:reality}
 	\chapter{Discussion} \label{ch:discussion}
 	\chapter{Conclusions} \label{ch:conclusions}
