added committee members

--- a/thesis.tex
+++ b/thesis.tex
@@ -47,8 +47,8 @@
 % qualifications after the name (i.e., John Doe, MFA or Jane Smith, PhD)
 % Names should appear as they do in ESS/Banner/HokieSpa, including middle initials.
 \principaladvisor{Thinh T. Doan, PhD}
-\coadvisor{Michael S. Hsaio, PhD}
-%\firstreader{Janet K. Martin}
+\coadvisor{Michael S. Hsiao, PhD}
+\firstreader{Ryan K. Williams, PhD}
 %\secondreader{Kara M. Jones}
 %\thirdreader{James Smith}
 %\fourthreader{Fourth Committee Member}
