--- a/thesis.tex
+++ b/thesis.tex
@@ -123,9 +123,64 @@ $\sigma$ is the eighteenth letter of the Greek alphabet, and carries the 's' sou
 	\end{figure}
 
     \chapter{Environment and Dataset} \label{ch:training_environment}
-    A custom simulation environment was created to demonstrate the possibilities of the Neuro-Symbolic Reinforcement Learning Methods presented in the previous chapter. The environment was set up for basic object manipulation tasks. The cooresponding dataset used to train the model that can be seen as an extension of the CLEVR dataset -- which instead prompts the agent to act on the objects in the environment.
-    \section{Environment Overview} \label{ch:environment_overview}
-    The environment consists of a six axis robot arm set up in the Gazebo Robotic Simulator. Within the arm's working envelop various basic 3-D shapes (i.e. spheres, cubes, cylinders, etc.) are present.
+    Given the problem space two environments were created to validate the neuro-symblic alogirithms mentioned in the previous sections
+
+    Custom real and cooresponding simulated environments were created to demonstrate the possibilities of the Neuro-Symbolic Reinforcement Learning Methods presented in the previous chapter. The environment was set up for basic object manipulation tasks. The cooresponding dataset used to train the model that can be seen as an extension of the CLEVR dataset -- which instead prompts the agent to act on the objects in the environment.
+    \section{Real-Time Hardware Environment}  \label{se:real_hardware_environment}
+    The physical hardware used to test the algorithms is made up of a 6-axis robot arm communicating over serial (UART) with a PC running the algorithms in a ROS2 Jazzy workspace.
+    The rigid components of the arm including gears and structural pieces are made of 3D-printed Polylactic Acid (PLA).
+    The robotic arm uses stepper motors, belts, and pulleys to articluate the 6 joints. 
+    The first 5 joints (J1 to J5) use bipolar NEMA 17 stepper motors, while the last joint J6, responsible for manipulating the end effector, uses a bipolar NEMA 8 stepper motor.
+    The belts and pulleys are "off-the-shelf" GT2 timing belts and pulleys of varying sizes, used to the torque applied to each joint (belts and pulleys connect every motor to a joint with the exception of J6).
+    Ball and shunt bearings of verious sizes are also used to reduce friction in the joints.
+
+    The electronic hardware is controlled by an ATmega328p microcontoller and 6 A4988 stepper motor drivers originally setup for controlling the stepper motors of a 3D-Printer.
+   Custom firmware was written for the microcontroller to run the 6 stepper motor drivers simultaineously with a serial (UART) inturrupt to recieve control commands from the host PC. 
+
+    \begin{center}
+      \begin{tikzpicture}
+
+        \node[draw,
+          minimum width=2cm,
+          minimum height=1.2cm,
+          ] (input) at (0,0){$ROS2$};
+
+        \node[draw,
+          minimum width=2cm,
+          minimum height=1.2cm,
+          right=1.5cm of input
+          ] (sum) {$\mu C$};
+
+        \node[draw,
+          align=center,
+          minimum width=2cm,
+          minimum height=1.2cm,
+          right=1cm of sum 
+          ]  (controller) {$Motor\ Controllers$};
+
+        \node[draw,
+          minimum width=2cm,
+          minimum height=1.2cm,
+          right=1cm of controller 
+          ]  (plant) {$Robotic\ Arm$};
+
+        \node[draw=none, right=1.5cm of plant] (output) {$y$};
+
+        \draw[->] (input.east) -- (sum.west) node[midway, above]{\tiny{$UART$}};
+        \draw[->] (sum.east) -- (controller.west) node[midway, above]{$u$};
+        \draw[->] (controller.east) -- (plant.west);
+        \draw[->] (plant.east) -- (output.west);
+        \draw[->] (output.center) ++(-1,0) |- ++(0,-1.25) -| (sum.south) node[midway, below]{};
+
+      \end{tikzpicture}\\
+      Feedback system
+    \end{center}
+
+
+
+    \section{Virtual Environment} \label{se:virtual_overview}
+    The environment consists of the same six axis robot arm described in the previous section set up in the Gazebo Robotic Simulator (using a ROS Universal Robot Description File and Gazebo Simulation Description File).
+    Within the arm's working envelop various basic 3-D shapes (i.e. spheres, cubes, cylinders, etc.) are present.
     
     \section{Robot Operating System} \label{se:robot_operating_system}
     The Robot Operating System is a middleware suite used for robot software development.
